[tool.poetry]
name = "snowpy3"
version = "2022.08.10"
description = "Python 3 Library to interact with and manage a ServiceNow instance via JSONv2"
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = ["RCB <rcb@tangonine.com>"]
readme = 'README.md'
repository = "https://github.com/tango9/snowpy3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.20"
redis = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
