[project]
name = "snowpy3"
version = "2025.09.12.001"
description = "Python 3 Library to interact with and manage a ServiceNow instance via JSONv2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=6.4.0",
    "requests>=2.32.5",
]
authors = ["TANGONINE <snowpy3@tangonine.com>"]
repository = "https://github.com/tango9/snowpy3"
homepage = "https://www.tangonine.com"
documentation = "https://github.com/tango9/snowpy3/wiki"

[dependency-groups]
dev = [
    "fakeredis>=2.31.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
]
